--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Lato:400,300,700,900);
+
 @import "settings";
 @import "foundation";
 
@@ -74,7 +76,7 @@ table, .fullw {
 }
 
 .dashboard-table-link i.fa {
-    color:#9e9e9e;
+    color:#34495E;
 }
 
 #main {
@@ -111,6 +113,15 @@ table, .fullw {
             text-align: right;
             color:#FFF;
             margin: 0px !important;
+
+            a {
+                color: #2c3e50;
+            }
+
+            a:hover{
+                color: #34495e;
+            }
+
         }
 
         .activity-description {
@@ -272,6 +283,10 @@ body .fc {
 
 .fc .fc-button-group>:first-child {
     margin-left: 0;
+}
+
+.fc-widget-header {
+    margin-top: 20px;
 }
 
 .fc-popover {
@@ -442,7 +457,6 @@ body .fc {
     display: block;
     font-size: .85em;
     line-height: 1.3;
-    border-radius: 3px;
     border: 1px solid #3a87ad;
     background-color: #3a87ad;
     font-weight: 400;
